--- a/amplify.yml
+++ b/amplify.yml
@@ -8,7 +8,7 @@ frontend:
             commands:
                 []
     artifacts:
-        baseDirectory: /
+        baseDirectory: personalsite
         files:
             - '**/*'
     cache:
