--- a/amplify.yml
+++ b/amplify.yml
@@ -3,10 +3,10 @@ frontend:
     phases:
         preBuild:
             commands:
-                []
+                - npm install -g sass
         build:
             commands:
-                []
+                - sass assets/scss/style.scss assets/css/style.css
     artifacts:
         baseDirectory: /
         files:
